[package]
name = "worktimer"
version = "0.1.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.14"
clap = { git = "https://github.com/clap-rs/clap" }
rood = "0.1.3"
