[package]
name = "worktimer"
version = "0.2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pomodoro"
path = "./src/pomodoro/lib.rs"

[[bin]]
name = "worktimer"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { git = "https://github.com/clap-rs/clap" }
indicatif = "0.14"
rood = "0.2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
